<?xml version="1.0"?>
<package>
  <name>item_finding</name>
  <version>0.1.2</version>
  <description>A practical implementation of MDM learning</description>

  <maintainer email="pedro.resende@ist.utl.pt">Pedro Resende</maintainer>

  <license>LGPLv3</license>

  <author email="pedro.resende@ist.utl.pt">Pedro Resende</author>
  <url>http://ros.org/wiki/mdm_example</url>
  <build_depend>mdm_library</build_depend>
  <build_depend>predicate_manager</build_depend>
  <build_depend>topological_tools</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>mdm_library</run_depend>
  <run_depend>predicate_manager</run_depend>
  <run_depend>topological_tools</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
    
  <buildtool_depend>catkin</buildtool_depend>
</package>