<package>
    <name>markov_decision_making</name>
    <version>0.1.1</version>
    
    <description>Markov Decision Making is a ROS library for robot decision-making based on MDPs.</description>
    
    <maintainer email="jmessias@isr.ist.utl.pt">Joao Messias</maintainer>
    
    <license>LGPLv3</license>
        
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>predicate_manager</build_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>predicate_manager</run_depend>
</package>


