<?xml version="1.0"?>
<package>
  <name>markov_decision_making</name>
  <version>0.1.2</version>
  <description> Markov Decision Making (MDM) is a ROS library for robot decision-making based on MDPs.
                This metapackage contains: the Markov Decision Making Library itself (mdm_library), 
                the auxiliary packages Predicate Manager (predicate_manager) and Topological Tools (topological_tools),
                and an example application of MDM (mdm_example)</description>

  <maintainer email="jmessias@isr.ist.utl.pt">Joao Messias</maintainer>
  <author email="jmessias@isr.ist.utl.pt">Joao Messias</author>
  <license>LGPLv3</license>
  <url>http://ros.org/wiki/markov_decision_making</url>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mdm_library</run_depend>
  <run_depend>predicate_manager</run_depend>
  <run_depend>topological_tools</run_depend>
  <export>
    <metapackage/> 
  </export>
</package>