<package>
    <name>mdm_library</name>
    <version>0.1.2</version>
    
    <description>This is the core package of the Markov Decision Making Library.</description>
    <author email="jmessias@isr.ist.utl.pt">Joao Messias</author>
    <maintainer email="jmessias@isr.ist.utl.pt">Joao Messias</maintainer>
    <url>http://ros.org/wiki/mdm_library</url>    
    <license>LGPLv3</license>
        
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>rqt_gui</build_depend>
    <build_depend>rqt_gui_py</build_depend>
    <build_depend>rqt_gui_cpp</build_depend>
    <build_depend>predicate_manager</build_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>rospy</run_depend> 
    <run_depend>rqt_gui</run_depend>
    <run_depend>rqt_gui_py</run_depend>
    <run_depend>rqt_gui_cpp</run_depend>
    <run_depend>predicate_manager</run_depend>

    <export>
      <rqt_gui plugin="${prefix}/plugin.xml"/>
    </export>  
  
</package>


