<?xml version="1.0"?>
<package>
  <name>mdm_topological_tools</name>
  <version>0.1.2</version>
  <description>The mdm_topological_tools package contains utilities to ease the deployment
               of the MDM Library in topological navigation problems.</description>

  <maintainer email="jmessias@isr.ist.utl.pt">Joao Messias</maintainer>

  <license>LGPLv3</license>
  <url>http://ros.org/wiki/mdm_topological_tools</url>
  <author email="jmessias@isr.ist.utl.pt">Joao Messias</author>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mdm_library</build_depend>
  <build_depend>predicate_manager</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>mdm_library</run_depend>
  <run_depend>predicate_manager</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
    
  <buildtool_depend>catkin</buildtool_depend>
</package>