<package>
    <name>predicate_manager</name>
    <version>0.1.1</version>
    
    <description>Predicate Manager is a ROS library to define and manage logical predicates and events.</description>
    <maintainer email="jmessias@isr.ist.utl.pt">João Messias</maintainer>
    <license>LGPLv3</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
</package>


