<?xml version="1.0"?>
<package>
  <name>topological_tools</name>
  <version>0.1.1</version>
  <description>The topological_tools package</description>

  <maintainer email="jmessias@isr.ist.utl.pt">Joao Messias</maintainer>

  <license>LGPLv3</license>

  <author email="jmessias@isr.ist.utl.pt">Joao Messias</author>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>markov_decision_making</build_depend>
  <build_depend>predicate_manager</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>markov_decision_making</run_depend>
  <run_depend>predicate_manager</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>


    
  <buildtool_depend>catkin</buildtool_depend>
</package>